Added IOS and Android folder to run flutter project

--- a/backend/.env
+++ b/backend/.env
@@ -2,11 +2,11 @@
 PORT=5000
 NODE_ENV=development
 
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/lawyers_diary
+# Database Configuration (using MongoDB Atlas for now)
+MONGODB_URI=mongodb+srv://demo:demo123@cluster0.mongodb.net/lawyers_diary?retryWrites=true&w=majority
 
 # JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_here
+JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 JWT_EXPIRES_IN=7d
 
 # File Upload Configuration
