--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,17 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["lawyer", "diary", "appointments", "clients", "legal"],
-  "author": "Your Name",
+  "keywords": [
+    "lawyer",
+    "diary",
+    "api",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
+  "author": "Lawyer's Diary Team",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
@@ -17,16 +24,17 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "multer": "^1.4.5",
     "helmet": "^7.0.0",
     "express-rate-limit": "^6.10.0",
-    "validator": "^13.11.0",
-    "moment": "^2.29.4"
+    "multer": "^1.4.5-lts.1",
+    "dotenv": "^16.3.1",
+    "express-validator": "^7.0.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.4",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
